# patchjson

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  tests.yml
app/: CMakeLists.txt
app/src/: args.cpp  args.hpp  main.cpp  version.hpp
include/json_manip/: json_manip.hpp
include/patchjson/: patchjson.hpp
lib/: CMakeLists.txt
lib/include/patchjson/: document.hpp  json_document.hpp  json_object.hpp  json_path.hpp  patchjson.hpp
lib/src/: document.cpp  document.hpp  json_document.cpp  json_object.cpp  json_object.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  patchjson.cpp  printer.cpp  printer.hpp  search.cpp  search.hpp  token.cpp  token.hpp
lib/tests/: CMakeLists.txt  document_tests.cpp  json_document_tests.cpp  json_object_tests.cpp  json_path_tests.cpp  lexer_tests.cpp  parser_tests.cpp  patchjson_tests.cpp  printer_tests.cpp  search_tests.cpp
lib/tests/utils/: token_utils.cpp  token_utils.hpp
src/: document.cpp  document.hpp  find.cpp  find.hpp  json_manip.cpp  json_object.cpp  json_object.hpp  json_path.hpp  json_pointer.cpp  json_pointer.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  patchjson.cpp  search.cpp  search.hpp  token.cpp  token.hpp
tests/: CMakeLists.txt  document_tests.cpp  find_tests.cpp  json_manip_tests.cpp  json_object_tests.cpp  json_path_tests.cpp  lexer_tests.cpp  parser_tests.cpp  patchjson_tests.cpp
tests/utils/: token_utils.cpp  token_utils.hpp
